# GUI_Calculator_in_C_glfw3_mesion_build_justfile_Rust

./: README.md  meson.build
001_glfw3_tutorials_quick_start/: README.md
003_Cpp_meson_compile/: .gitignore  README.md
003_Cpp_meson_compile/a01_cpp_init_glfw3/: justfile  meson.build
003_Cpp_meson_compile/a01_cpp_init_glfw3/glad/src/: glad.c
003_Cpp_meson_compile/a01_cpp_init_glfw3/src/: main.cpp
003_Cpp_meson_compile/a01_cpp_init_glfw3/src/glad/: glad.h
003_Cpp_meson_compile/a01_cpp_init_glfw3_final/: meson.build
003_Cpp_meson_compile/a01_cpp_init_glfw3_final/src/: main.cpp
003_justfile_compile/a01_init_glfw3/: justfile
004_GUI_C_glfw3_make_GUI_Calculator/: README.md
004_GUI_C_glfw3_make_GUI_Calculator/a02_add_leif/: meson.build
004_GUI_C_glfw3_make_GUI_Calculator/a02_add_leif/src/: leif.c  main.c
004_GUI_C_glfw3_make_GUI_Calculator/z99_gtk_convert_glfw3_final/: README.md  meson.build
004_GUI_C_glfw3_make_GUI_Calculator/z99_gtk_convert_glfw3_final/src/: main.c
004_GUI_C_glfw3_make_GUI_Calculator/z99_part2_gtk_convert_glfw3_final/src/: main.c  stb_easy_font.h
005_GUI_Cpp_glfw3_make_GUI/: README.md
006_GUI_C_glfw3_make_GUI_Calculator/: README.md
006_GUI_C_glfw3_make_GUI_Calculator/a01_init_glfw3/src/: main.c
006_GUI_C_glfw3_make_GUI_Calculator/a03_add_leif_meson/src/: leif.c  main.c
006_GUI_C_glfw3_make_GUI_Calculator/a04_boring/: meson.build
006_GUI_C_glfw3_make_GUI_Calculator/a04_boring/include/glad/include/glad/: glad.h
006_GUI_C_glfw3_make_GUI_Calculator/a04_boring/include/glad/src/: glad.c
006_GUI_C_glfw3_make_GUI_Calculator/a04_boring/src/: glad.c  main.c
006_GUI_C_glfw3_make_GUI_Calculator/x99_glfw_immediate/: README.md
006_GUI_C_glfw3_make_GUI_Calculator/x99_glfw_immediate/src/: main.c
006_GUI_C_glfw3_make_GUI_Calculator/z99_gtk_convert_glfw3_final/src/: main.c
006_GUI_C_glfw3_make_GUI_Calculator/z99_part2_gtk_convert_glfw3_final/: meson.build
006_GUI_C_glfw3_make_GUI_Calculator/z99_particles/: meson.build
006_GUI_C_glfw3_make_GUI_Calculator/z99_particles/src/: main.c  tinycthread.c
006_GUI_C_glfw3_make_GUI_Calculator/z99_particles/src/headers/: leif.h  tinycthread.h
007_GUI_Cpp_glfw3_make_GUI/: README.md
007_GUI_Cpp_glfw3_make_GUI/a01_cpp_init_glfw3/: meson.build
007_GUI_Cpp_glfw3_make_GUI/a01_cpp_init_glfw3/src/: main.cpp
007_GUI_Cpp_glfw3_make_GUI/a02_macos_cpp_init_glfw3/: meson.build
007_GUI_Cpp_glfw3_make_GUI/macOS/a02_monitor/: meson.build
007_GUI_Cpp_glfw3_make_GUI/macOS/a02_monitor/src/: main.cpp
Deep_Dive_glfw3_training/b01_init_glfw3_macOS/src/: main.c
Rust_Lang_glfw3/: README.md
glfw3_training/a01_init_glfw3/: meson.build
glfw3_training/a01_init_glfw3/src/: main.c
glfw3_training/b01_init_glfw3_macOS/: README.md
gui_c_glfw3/: README.md  meson.build
gui_c_glfw3_hello/: justfile  main.c  meson.build
